[package]
name = "furtim"
version = "0.1.1"
edition = "2021"
license = "MIT"

[dependencies]
num_cpus = "1.15"       
sysinfo = "0.29"        
chacha20poly1305 = "0.10.1" 
base64 = "0.22.1"

windows-sys = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_Security" 
]}

[build-dependencies]
chacha20poly1305 = "0.10.1" 
rand = "0.8.5"
rand_core = "0.6.4"
base64 = { version = "0.22.1", features = ["std"] }

[profile.release]
strip = false  # Keep icons (makes the file larger and more trustworthy for some scanners)
opt-level = 3  # Standard optimization